--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -21,6 +21,7 @@
   font-size: 20px;
   font-weight: bold;
   color:#1856db;
+  cursor: pointer;
 }
 .submit{
   display: flex;
@@ -33,4 +34,26 @@
 }
 .sign-up{
   margin: 20px;
+}
+.field-content{
+  display: flex;
+  flex-direction: column;
+}
+.button-link {
+  text-decoration: none;
+  color: white;
+}
+.button-link:hover{
+  color: white;
+}
+.forget-content{
+  text-align: center; 
+}
+.heading{
+  font-weight: bold;
+  color:#1856db;
+  margin-top: 20px;
+}
+.forget-link{
+  text-decoration: none;
 }
